--- a/Templates/index.html
+++ b/Templates/index.html
@@ -64,7 +64,7 @@
 </nav>
 <div class="container">
 
-<h2>InstaTwittBook <small>The new Collaboration Engine</small></h2>
+<h2>InstaTwittBook <small>The new Collaboration Engine - From Those Who Made YouTwittFace</small></h2>
 
 </div>
 
